styles/main.css
* {
    font-family: 'Roboto', sans-serif;
}

body {
    min-height: 100vh;
    overflow-x: hidden;
}

.nav {
    position: fixed;
    min-width: 100vw;
    background-color: #007ACC;
    height: 4em;
    z-index: 2;
}

.nav-link {
    color: white;
    font-size: 1.2em;
    margin-top: 7px;
}

.nav-link:hover {
    color: white;
}

.nav-item {
    transition: background-color 0.5s;
}
.nav-item:hover {
    background-color: #006BB3;
}

.active {
    background-color: #006BB3
}

.greeting {
    opacity: 0%;
    display: inline-block;
    position: relative;
    text-align: center;
    top: 300px;
    left: 35vw;
    border: solid black 4px;
    padding: 20px;
    animation-name: fadeIn;
    animation-duration: 1.8s;
    animation-delay: 0.5s;
    animation-fill-mode: forwards;
    width: 30%;
    height: 10%
}

.greet-hello {
    opacity: 0%;
    position: relative;
    animation-name: fadeIn;
    animation-duration: 1.8s;
    animation-delay: 1s;
    animation-fill-mode: forwards;
}

.greet-position {
    opacity: 0%;
    position: relative;
    animation-name: fadeIn;
    animation-duration: 1s;
    animation-delay: 1.5s;
    animation-fill-mode: forwards;
}

.skills {
    position: relative;
    max-width: 60vw;
    top: 200vh;
    left: 20vw;
}

.skills-title {
    text-decoration: solid underline #31383F;
}

.about {
    position: relative;
    top: 100vh;
    left: 20vw;
}

.about-name {
    text-decoration: solid underline #31383F;
}

.about-desc {
    font-size: 20px;
}

